# why-is-it-green-api

./: .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  collection_insomnia.json  collection_postman.json  docker-compose.yml
.github/workflows/: build.yml  ci.yml  deploy.yml
src/: lib.rs  main.rs
src/adapters/inbound/http/: healthcheck_handler.rs  mod.rs  version_handler.rs
tests/: healthcheck_test.rs  version_test.rs
